Fix header username wrapping

--- a/src/root/header.scss
+++ b/src/root/header.scss
@@ -166,6 +166,7 @@ header {
     .header-username {
         font-size: 16px;
         font-weight: bold;
+        white-space: nowrap;
     }
 }
 
